# cntemad-lms

./: .eslintrc.cjs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/commands/: commit.md  deploy.md  pr.md  story.md  validate.md
.claude/memory/: CURRENT_SPRINT.md  DECISIONS.md  DONE.md  EPICS.md  MASTER_SPEC.md
.claude/memory/epics/: EPIC-001.md  EPIC-002.md  EPIC-003.md  EPIC-004.md  EPIC-005.md  EPIC-006.md  EPIC-007.md  EPIC-008.md  EPIC-009.md
.claude/memory/stories/: STORY-001.md  STORY-002.md  STORY-003.md  STORY-004.md  STORY-005.md  STORY-006.md  STORY-007.md  STORY-008.md  STORY-009.md  STORY-010.md  STORY-011.md  STORY-012.md  STORY-013.md  STORY-014.md  STORY-015.md  STORY-016.md  STORY-017.md  STORY-018.md  STORY-019.md  STORY-020.md  STORY-021.md  STORY-022.md  STORY-023.md  STORY-024.md  STORY-025.md  (+21 more)
.claude/templates/: epic.md  story.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pr-checks.yml  release.yml
cntemad_lms/: __init__.py  hooks.py  modules.txt  patches.txt
cntemad_lms/api/: national.py
cntemad_lms/cntemad_lms/: hooks.py  utils.py
docs/: INDEX-CLAUDE.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.js
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/.claude/: CLAUDE.md
frontend/src/: index.css  main.js  router.js
(+126 files in other folders)
